--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack",
+    "test": "mocha",
     "deploy": ""
   },
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.4.0",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.2",
     "browser-sync": "^2.18.13",
     "browser-sync-webpack-plugin": "^2.2.2",
+    "chai": "^4.2.0",
     "eslint": "^5.5.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.7.0",
@@ -23,6 +27,7 @@
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-standard": "^4.0.0",
     "expose-loader": "^0.7.3",
+    "mocha": "^6.1.3",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0"
   },
